# de-toolbox

./: README.md
dagster-env-lin/: .gitignore  Dockerfile_dagster  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
dagster-env-lin/projects/: __init__.py
dagster-env-lin/projects/hello_world/: __init__.py  hello_world_definitions.py
spark-thrift-local-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-spark-thrift.sh  test_spark_connection.py
