[tool.poetry]
name = "dagster-env-lin"
version = "0.1.0"
description = "Dagster project with Docker and DBT integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "==1.10.21"
dagster-graphql = "==1.10.21"
dagster-webserver = "==1.10.21"
dagster-postgres = "==0.26.21"
dagster-dbt = "==0.26.21"
dagster-docker = "==0.26.21"
dbt-core = "==1.9.0"
dbt-postgres = "==1.9.0"
dbt-spark = {extras = ["pyhive"], version = "^1.9.0"}
psycopg2-binary = "==2.9.10"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
ipdb = "^0.13.0"
dagster = "^1.10.21"
dagster-dbt = "^0.26.21"
dagster-webserver = "^1.10.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
# Note: The above tools.* sections are compatible with Poetry

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
